<resources>
    <string name="app_name" translatable="false">FoodBook</string>


    <!--Facebook-->
    <string name="facebook_app_id" translatable="false">126458661438360</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb126458661438360</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank context</string>
    <string name="home_page">Home page</string>
    <string name="recipe_name">Enter recipe name</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="enter_ingredient">Enter ingredient</string>
    <string name="write_how_to_make_that_recipe">Write how to make your recipe…</string>
    <string name="enter_tag">Enter tag</string>
    <string name="add_recipe">Add recipe</string>
    <string name="uploading_photos">Uploading photos…</string>
    <string name="searchHint">Search Foodbook</string>
    <string name="add_friend">Add follower</string>
    <string name="followers">followers</string>
    <string name="recipes">recipes</string>
    <string name="following">following</string>
    <string name="follow">follow</string>
    <string name="location">Location</string>
    <string name="about_me">About me</string>
    <string name="email_address">Email address</string>
    <string name="name">Name</string>
    <string name="added_recipe">Added recipe</string>
    <string name="failed_to_add_recipe">Failed to add recipe</string>
    <string name="recipe">Recipe</string>
    <string name="no_user">No such user</string>
    <string name="no_user_message">That user does not exist</string>
    <string name="recipes_owned_by">Recipes owned by</string>
    <string name="search_recipes">Recipes</string>
    <string name="search_people">People</string>
    <string name="following_title">People you follow</string>
    <string name="change_background_image">Change background image</string>
    <string name="change_avatar_image">Change avatar image</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="type_friends_name">Type friends name</string>
    <string name="following_you">Followers</string>
    <string name="recipes_you_liked">Recipes you liked</string>
    <string name="registration">Registration</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="save_changes">Save changes</string>
    <string name="error_occured">Error occurred</string>
    <string name="updating_recipe">Updating recipe</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="recipe_add_failed">Failed to add recipe. Try again later.</string>
    <string name="uploaded_image">Uploaded image</string>
    <string name="photo_upload_failed">Failed to upload photo</string>
    <string name="about_not_filled">Hello, I haven\'t filled this yet... be patient ;)</string>
    <string name="your_profile">Your profile</string>
    <string name="ustawienia_konta">Account Settings</string>
    <string name="people_you_follow">People you follow</string>
    <string name="liked_recipes">Liked recipes</string>
    <string name="find_friends">Find friends</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="email_in_use">The email address is already in use by another account.</string>
    <string name="user_offline">You are offline. Check connection and try again.</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_email">Invalid email address. No such user.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="logging_via_google">Logging via Google</string>
    <string name="play_services_error">Google Play Services error.</string>
    <string name="logging_via_facebook">Logging via Facebook</string>
    <string name="this_field_required">That field is required!</string>
    <string name="cant_get_user">Can\'t get user</string>
    <string name="following_new_user">Following new user</string>
    <string name="stopped_following_user">Stopped following user</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="sure_delete">Are you sure? This action is permanent!</string>
    <string name="not_removed_recipe">Did not remove</string>
    <string name="cant_remove_recipe">You can\'t remove this recipe.</string>
    <string name="comment_added">Comment added</string>
    <string name="comment_not_added">Comment not added. Try again later.</string>
    <string name="recipe_not_found">Recipe not found!</string>
    <string name="recipe_not_exists">That recipe does not exist!</string>
    <string name="likes">likes</string>
    <string name="comments">comments</string>
    <string name="field_required">That field is required!</string>
    <string name="passwords_must_match">Passwords must match!</string>
    <string name="select_picture">Select Picture</string>
    <string name="settings_saved">Your settings have been saved</string>
    <string name="ups_something_wrong">Ups, something went wrong</string>
    <string name="failed_loading">Failed loading data</string>
    <string name="check_connection_try_later">Check network connection and try again</string>
    <string name="likes_your_recipe">likes your recipe</string>
    <string name="likes_recipe">liked recipe</string>
    <string name="added_new_recipe">added new recipe</string>
    <string name="commented_on_recipe">"commented recipe of: "</string>
    <string name="commented_your_recipe">commented your recipe</string>
    <string name="profile_settings">Profile settings</string>
    <string name="must_be_filled">This field must be filled</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_image">Pick image</string>
    <string name="deleting_photo">Deleting photo</string>
    <string name="sure_delete_photo">Are you sure you want to delete this photo?</string>
    <string name="press_and_hold_to_delete_photo">Press and hold to delete photo</string>
    <string name="recipe_been_deleted">This recipe has been deleted</string>
    <string name="save_recipes">Save your recipes</string>
    <string name="look_for_ispirations">Search for inspirations</string>
    <string name="share_recipes">Share your ideas</string>
    <string name="register">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_action">register</string>
    <string name="login_action">Login</string>
    <string name="user">User</string>
    <string name="cant_add_photo">Can\'t add another photo</string>
    <string name="max_photos">The maximum amount of photos is 5.</string>
    <string name="logout">Log out</string>
    <string name="own_recipe_comment">You have commented your own recipe</string>
    <string name="stop_following">stop following</string>
</resources>
