<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="pl.mdanilowski.foodbook.activity.settingsProfile.ProfileSettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar_dafault" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivBackgroundImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@color/primary_dark"/>

            <Button
                android:id="@+id/btnChangeBackground"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/accent_button"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/change_background_image"
                android:textColor="@color/white_100" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@color/colorAccent_30" />

            <Button
                android:id="@+id/btnChangeAvatar"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/accent_button"
                android:padding="8dp"
                android:text="@string/change_avatar_image"
                android:textColor="@color/white_100" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:textColorHint="@color/white_98"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_100" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_98"
                android:hint="@string/about_me">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etAboutMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_100"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_98"
                android:hint="@string/email_address">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_100"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_98"
                android:hint="@string/country">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_100"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white_98"
                android:hint="@string/city">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_100"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnSaveSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/accent_button"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white_100" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
