<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="pl.mdanilowski.foodbook.activity.addRecipe.AddRecipeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etName"
                    style="@style/AddRecipeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:cursorVisible="true"
                    android:hint="@string/recipe_name"
                    android:maxLines="5"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <Button
                    android:id="@+id/btnAddPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/add_recipe_button"
                    android:text="@string/add_photo"
                    android:textColor="@color/white_100"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/ingredients"
                    android:textColor="@color/white_100"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/llIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etIngredient"
                        style="@style/AddRecipeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/enter_ingredient"
                        android:textSize="16sp" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btnAddIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@mipmap/ic_add"
                    app:civ_border_color="@color/white_100"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/description"
                    android:textColor="@color/white_100"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etDescription"
                    style="@style/AddRecipeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="start"
                    android:hint="@string/write_how_to_make_that_recipe"
                    android:maxLines="50"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/tags"
                        android:textColor="@color/white_100"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/llTags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical">

                        <EditText
                            style="@style/AddRecipeEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:hint="@string/enter_tag"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/btnAddTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@mipmap/ic_add"
                        app:civ_border_color="@color/white_100"
                        app:civ_border_width="1dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnAddRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/add_recipe_button"
                    android:text="@string/add_recipe"
                    android:textColor="@color/white_100"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
